 581.	[bug]		log severity was not being correctly processed.
			[RT #485]

 580.	[func]		Ignore trailing garbage on incoming DNS packets,
			for interoperability with broken server
			implementations. [RT #491]

 579.	[bug]		nsupdate did not take a filename to read update from.
			[RT #492]

 578.	[func]		New config option "notify-source", to specify the
			source address for notify messages.

 577.	[func]		Log illegal RDATA combinations. e.g. multiple
			singlton types, cname and other data.

 576.	[doc]		isc_log_create() description did not match reality.

 575.	[bug]		isc_log_create() was not setting internal state
			correctly to reflect the default channels created.

 574.	[bug]		TSIG signed queries sent by the resolver would fail to
			have their responses validated and would leak memory.

 573.	[bug]		The journal files of IXFRed slave zones were
			inadvertantly discarded on server reload, causing
			"journal out of sync with zone" errors on subsequent
			reloads. [RT #482]

 572.	[bug]		Quoted strings were not accepted as key names in
			address match lists.

 571.	[bug]		It was possible to create an rdataset of singleton
			type which had more than one rdata.  [RT #154]
			[RT #279]

 570.	[bug]		rbtdb.c allowed zones containing nodes which had
			both a CNAME and "other data". [RT #154]

 569.	[func]		The DNSSEC AD bit will not be set on queries which
			have not requested a DNSSEC response.

 568.	[func]		Add sample simple database drivers in contrib/sdb.

 567.	[bug]		Setting the zone transfer timeout to zero caused an
			assertion failure. [RT #302]

 566.	[func]		New public function dns_timer_setidle().

 565.	[func]		Log queries more like BIND 8: query logging is now
			done to category "queries", level "info". [RT #169]

 564.	[func]		Add sortlist support to lwresd.

 563.	[func]		New public functions dns_rdatatype_format() and
			dns_rdataclass_format(), for convenient formatting
			of rdata type/class mnemonics in log messages.
