@@ -1,3 +1,6 @@
+ 582.	[bug]		dns_zone_idetach() failed to lock the zone.
+			[RT #199, #463]
+
  581.	[bug]		log severity was not being correctly processed.
 			[RT #485]
 
